--- a/index.html
+++ b/index.html
@@ -25,11 +25,57 @@
 	<body>
 		<header class="jumbotron">
 			<h1 class="display-3">Work Day Scheduler</h1>
-			<p class="lead">A simple calendar app for scheduling your work day</p>
+			<p class="lead description">A simple calendar app for scheduling your work day</p>
+
+			<!-- CAPTURE THE SYSTEM DATE AND PLACE IT HERE -->
+
 			<p id="currentDay" class="lead"></p>
 		</header>
+		<!-- Time Blocks for PAST -->
 		<div class="container">
-			<!-- Timeblocks go here -->
+			<!-- PAST ROWS: Should be 0 past events before 9am and increment by 1 each hour-->
+			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">5pm</div>
+				<textarea class="col-lg-8 col-md-8 past"></textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
+			<!-- PRESENT ROW: Should only be one and only at between your work day (9-5 or 9 hours)-->
+			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">6pm</div>
+				<textarea class="col-lg-8 col-md-8 present"></textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
+			<!-- Future ROW: Should only be one and only at between your work day (9-5 or 9 hours)-->
+			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">7pm</div>
+				<textarea class="col-lg-8 col-md-8 future"></textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
+			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">8pm</div>
+				<textarea class="col-lg-8 col-md-8 future"></textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
+			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">9pm</div>
+				<textarea class="col-lg-8 col-md-8 future"></textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
+			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">10pm</div>
+				<textarea class="col-lg-8 col-md-8 future"></textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
+			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">11pm</div>
+				<textarea class="col-lg-8 col-md-8 future"></textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
+			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">12pm</div>
+				<textarea class="col-lg-8 col-md-8 future"></textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
