Removed rows to test differnt layouts by changing the text area with the past, present, and future css style classes.

--- a/index.html
+++ b/index.html
@@ -36,17 +36,23 @@
 			<!-- PAST ROWS: Should be 0 past events before 9am and increment by 1 each hour-->
 			<div class="row time-block">
 				<div class="col-lg-2 col-md-2 hour">5pm</div>
-				<textarea class="col-lg-8 col-md-8 past"></textarea>
+				<textarea class="col-lg-8 col-md-8 past">PAST</textarea>
 				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
-			<!-- PRESENT ROW: Should only be one and only at between your work day (9-5 or 9 hours)-->
 			<div class="row time-block">
+				<div class="col-lg-2 col-md-2 hour">6pm</div>
+				<textarea class="col-lg-8 col-md-8 past">PAST</textarea>
+				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
+			</div>
+		</div>
+		<!-- PRESENT ROW: Should only be one and only at between your work day (9-5 or 9 hours)-->
+		<!-- <div class="row time-block">
 				<div class="col-lg-2 col-md-2 hour">6pm</div>
 				<textarea class="col-lg-8 col-md-8 present"></textarea>
 				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
-			</div>
-			<!-- Future ROW: Should only be one and only at between your work day (9-5 or 9 hours)-->
-			<div class="row time-block">
+			</div> -->
+		<!-- Future ROW: Should only be one and only at between your work day (9-5 or 9 hours)-->
+		<!-- <div class="row time-block">
 				<div class="col-lg-2 col-md-2 hour">7pm</div>
 				<textarea class="col-lg-8 col-md-8 future"></textarea>
 				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
@@ -76,7 +82,7 @@
 				<textarea class="col-lg-8 col-md-8 future"></textarea>
 				<button class="col-lg-2 col-md-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
-		</div>
+		</div> -->
 
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
