Updated the readme to include a description, tools used, screenshots, and credits.

--- a/index.html
+++ b/index.html
@@ -24,49 +24,49 @@
 		<div class="container">
 			<!-- PAST ROWS: Should be 0 past events before 9am and increment by 1 each hour-->
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 col-sm-2 hour">9am</div>
-				<textarea id="time-9" class="col-lg-8 col-md-8 col-sm-8"></textarea>
-				<button data-time="9" class="col-lg-2 col-md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 hour">9am</div>
+				<textarea id="time-9" class="col-lg-8 col-md-8 col-sm-8 col-xs-8"></textarea>
+				<button data-time="9" class="col-lg-2 col-md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 md-2 col-sm-2 hour">10am</div>
-				<textarea id="time-10" class="col-lg-8 col-md-8 md-2 col-sm-8"></textarea>
-				<button data-time="10" class="col-lg-2 col-md-2 md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 hour">10am</div>
+				<textarea id="time-10" class="col-lg-8 col-md-8 md-2 col-sm-8 col-xs-8"></textarea>
+				<button data-time="10" class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 md-2 col-sm-2 hour">11am</div>
-				<textarea id="time-11" class="col-lg-8 col-md-8 md-2 col-sm-8"></textarea>
-				<button data-time="11" class="col-lg-2 col-md-2 md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 hour">11am</div>
+				<textarea id="time-11" class="col-lg-8 col-md-8 md-2 col-sm-8 col-xs-8"></textarea>
+				<button data-time="11" class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 md-2 col-sm-2 hour">12pm</div>
-				<textarea id="time-12" class="col-lg-8 col-md-8 md-2 col-sm-8"></textarea>
-				<button data-time="12" class="col-lg-2 col-md-2 md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 hour">12pm</div>
+				<textarea id="time-12" class="col-lg-8 col-md-8 md-2 col-sm-8 col-xs-8"></textarea>
+				<button data-time="12" class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 md-2 col-sm-2 hour">1pm</div>
-				<textarea id="time-13" class="col-lg-8 col-md-8 md-2 col-sm-8"></textarea>
-				<button data-time="13" class="col-lg-2 col-md-2 md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 hour">1pm</div>
+				<textarea id="time-13" class="col-lg-8 col-md-8 md-2 col-sm-8 col-xs-8"></textarea>
+				<button data-time="13" class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 md-2 col-sm-2 hour">2pm</div>
-				<textarea id="time-14" class="col-lg-8 col-md-8 md-2 col-sm-8"></textarea>
-				<button data-time="14" class="col-lg-2 col-md-2 md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 hour">2pm</div>
+				<textarea id="time-14" class="col-lg-8 col-md-8 md-2 col-sm-8 col-xs-8"></textarea>
+				<button data-time="14" class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 md-2 col-sm-2 hour">3pm</div>
-				<textarea id="time-15" class="col-lg-8 col-md-8 md-2 col-sm-8"></textarea>
-				<button data-time="15" class="col-lg-2 col-md-2 md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 hour">3pm</div>
+				<textarea id="time-15" class="col-lg-8 col-md-8 md-2 col-sm-8 col-xs-8"></textarea>
+				<button data-time="15" class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 md-2 col-sm-2 hour">4pm</div>
-				<textarea id="time-16" class="col-lg-8 col-md-8 md-2 col-sm-8"></textarea>
-				<button data-time="16" class="col-lg-2 col-md-2 md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 hour">4pm</div>
+				<textarea id="time-16" class="col-lg-8 col-md-8 md-2 col-sm-8 col-xs-8"></textarea>
+				<button data-time="16" class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 			<div class="row time-block">
-				<div class="col-lg-2 col-md-2 md-2 col-sm-2 hour">5pm</div>
-				<textarea id="time-17" class="col-lg-8 col-md-8 md-2 col-sm-8"></textarea>
-				<button data-time="17" class="col-lg-2 col-md-2 md-2 col-sm-2 saveBtn"><i class="far fa-save sav"></i></button>
+				<div class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 hour">5pm</div>
+				<textarea id="time-17" class="col-lg-8 col-md-8 md-2 col-sm-8 col-xs-8"></textarea>
+				<button data-time="17" class="col-lg-2 col-md-2 md-2 col-sm-2 col-xs-2 saveBtn"><i class="far fa-save sav"></i></button>
 			</div>
 		</div>
 
